--- a/watchlist.html
+++ b/watchlist.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
@@ -9,10 +10,10 @@
             <a>My Watchlist</a> 
         </header>
 
-        <main id="watchlist-main">
+        <section id="watchlist-main">
             
-        </main>
+        </section>
         
-        <script src="index.js"></script>
+        <script src="watchlist.js" type="module"></script>
     </body>
 </htm
