--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
@@ -16,6 +17,6 @@
             
         </main>
         
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </htm
